@@ -20,16 +20,14 @@ import "client_base.dart";
  *
  */
 
-//final _logger = new Logger('JSON-RPC');
-
 class ServerProxy extends ServerProxyBase {
   bool persistentConnection;
   ServerProxy(String url, [this.persistentConnection = true]) : super(url);
-  Future<dynamic> executeRequest(dynamic package) {
+
+  dynamic executeRequest(dynamic package) async {
     //return a future with the JSON-RPC response
     HttpClient conn = new HttpClient();
-    String jsonContent = '';
-    Completer<dynamic> c = new Completer<dynamic>();
+
     String payload;
     try {
       payload = JSON.encode(package);
@@ -37,28 +35,32 @@ class ServerProxy extends ServerProxyBase {
       throw new UnsupportedError(
           'Item ($package) could not be serialized to JSON');
     }
-    return conn.postUrl(Uri.parse(url)).then((HttpClientRequest request) {
-      request.headers.add('Content-Type', 'application/json; charset=UTF-8');
-      // persistentConnection leads to 15-second delay returning on end of script
-      request.persistentConnection = persistentConnection;
-      request.write(payload);
-      return request.close();
-    }).then((HttpClientResponse response) {
-      response.transform(UTF8.decoder).listen((dynamic contents) {
-        jsonContent += contents.toString();
-      }, onDone: () {
-        if (response.statusCode == 204 || jsonContent.isEmpty) {
-          c.complete(null);
-        } else if (response.statusCode == 200) {
-          c.complete(JSON.decode(jsonContent));
-        } else {
-          c.completeError(
-              new TransportStatusError(response.statusCode, response, package));
-        }
-      });
-    }).then((_) {
-      return c.future;
+    HttpClientRequest request = await conn.postUrl(Uri.parse(url));
+    request.headers.add('Content-Type', 'application/json; charset=UTF-8');
+
+    // persistentConnection leads to 15-second delay returning on end of script
+    request.persistentConnection = persistentConnection;
+
+    request.write(payload);
+    HttpClientResponse response = await request.close();
+
+    String jsonContent = '';
+    Completer c = new Completer();
+
+    response.transform(UTF8.decoder).listen((dynamic contents) {
+      jsonContent += contents.toString();
+    }, onDone: () {
+      if (response.statusCode == 204 || jsonContent.isEmpty) {
+        c.complete(null);
+      } else if (response.statusCode == 200) {
+        c.complete(JSON.decode(jsonContent));
+      } else {
+        c.completeError(
+            new TransportStatusError(response.statusCode, response, package));
+      }
     });
+
+    return c.future;
   }
 }
 
