@@ -1,3 +1,4 @@
+@TestOn("browser")
 library client_test;
 
 import 'package:test/test.dart';
@@ -9,8 +10,9 @@ class MyClass {
   MyClass();
 }
 
+dynamic proxy;
 void main() {
-  ServerProxy proxy = new ServerProxy('http://127.0.0.1:8394/sum');
+  proxy = new ServerProxy('http://127.0.0.1:8394/sum');
   group('JSON-RPC', () {
     test("positional arguments", () {
       proxy.call('subtract', [23, 42]).then((result) {
@@ -61,19 +63,12 @@ void main() {
     });
 
     test("not JSON-serializable", () {
-      try {
-        proxy.call('subtract', [3, 0 / 0]);
-      } catch (e) {
-        expect(e, isUnsupportedError);
-      }
+      expect(proxy.call('subtract', [3, 0 / 0]), throwsUnsupportedError);
     });
 
     test("class instance not JSON-serializable", () {
-      try {
-        proxy.call('subtract', [3, new MyClass()]);
-      } catch (e) {
-        expect(e, isUnsupportedError);
-      }
+      expect(
+          proxy.call('subtract', [3, new MyClass()]), throwsUnsupportedError);
     });
 
     test("serializable class - see classb.dart", () {
@@ -82,22 +77,16 @@ void main() {
       });
     });
 
-    test("custom error", () {
-      proxy.call('baloo', ['sam']).then((result) {
-        expect(result, equals('Balooing sam, as requested.'));
-      });
-      proxy
-          .call('baloo', ['frotz'])
-          .then((result) => result)
-          .then((returned) => proxy.checkError(returned))
-          .then((result) {
-            // shouldn't get here
-            throw new Exception(result);
-          })
-          .catchError((e) {
-            print("$e, ${e.runtimeType}");
-            expect(e.code, equals(34));
-          });
+    test("custom error", () async {
+      dynamic result = await proxy.call('baloo', ['sam']);
+      expect(result, equals('Balooing sam, as requested.'));
+
+      result = await proxy.call('baloo', ['frotz']);
+      try {
+        proxy.checkError(result);
+      } catch (e) {
+        expect(e.code, equals(34));
+      }
     });
 
     test("no such method", () {
@@ -119,8 +108,7 @@ void main() {
     });
 
     test("basic batch", () {
-      BatchServerProxy proxy =
-          new BatchServerProxy('http://127.0.0.1:8394/sum');
+      proxy = new BatchServerProxy('http://127.0.0.1:8394/sum');
       proxy.call('subtract', [23, 42]).then((result) {
         expect(result, equals(-19));
       });
@@ -139,8 +127,7 @@ void main() {
     });
 
     test("batch with error on a notification", () {
-      BatchServerProxy proxy =
-          new BatchServerProxy('http://127.0.0.1:8394/sum');
+      proxy = new BatchServerProxy('http://127.0.0.1:8394/sum');
       proxy.call('summation', [
         [1, 2, 3, 4, 5]
       ]).then((result) {
