@@ -1,14 +1,0 @@
-<!DOCTYPE html>
-
-<html>
-<head>
-<meta charset="UTF-8">
-<title>JSON-RPC Client Test</title>
-</head>
-<!-- FOR BEST RESULTS -->
-<!-- RUN A TEST SERVER FIRST -->
-<body>
-  <script type="application/dart" src="client_test.dart"></script>
-  <script async src="packages/browser/dart.js"></script>
-</body>
-</html>
